+ introduced unit SortBase, which implements the foundation for pluggable   sorting algorithms. A default QuickSort implementation is provided by the   unit. Other units can be added, to provide other sorting algorithms (e.g.   HeapSort, MergeSort, IntroSort, etc.) * TList and TFPList updated to use the current default sorting algorithm defined   in SortBase for their .Sort method.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41167 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9755,6 +9755,7 @@ rtl/inc/rttih.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/sfpu128.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/inc/sfpux80.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/inc/softfpu.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/inc/sortbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/sstrings.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/strings.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/stringsi.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
