--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -15,7 +15,7 @@ implicitunits=sysinitpas sysinitcyg sysinitgprof \
       windows initc cmem dynlibs signals \
       dos messages \
       rtlconsts sysconst sysutils math types \
-      typinfo fgl classes \
+      typinfo sortbase fgl classes \
       cpu mmx charset character getopts \
       fpwidestring \
       winsysut sharemem exeinfo fpintres windirs \
