--- a/rtl/morphos/Makefile.fpc
+++ b/rtl/morphos/Makefile.fpc
@@ -17,7 +17,7 @@ units=$(SYSTEMUNIT) heaptrc uuchar objpas macpas iso7185 extpas buildrtl cpall
 
 implicitunits=$(SYSINITUNITS) athreads dos sysutils \
       ctypes strings rtlconsts sysconst math types \
-      typinfo fgl classes charset character getopts \
+      typinfo sortbase fgl classes charset character getopts \
       fpintres exeinfo lineinfo \
       cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
       cp437 cp646 cp737 cp775 cp850 cp852 cp855 cp856 cp857 cp860 cp861 cp862 \
