--- a/rtl/win64/Makefile.fpc
+++ b/rtl/win64/Makefile.fpc
@@ -14,7 +14,7 @@ implicitunits=sysinit ctypes strings \
       dos messages \
       windows cmem dynlibs \
       rtlconsts sysconst sysutils math types \
-      typinfo fgl classes getopts \
+      typinfo sortbase fgl classes getopts \
       charset character fpwidestring \
       sharemem exeinfo fpintres windirs \
       cpu signals \
