--- a/rtl/wince/Makefile.fpc
+++ b/rtl/wince/Makefile.fpc
@@ -11,7 +11,7 @@ units=$(SYSTEMUNIT) uuchar fpintres ctypes objpas macpas iso7185 extpas strings 
       windows messages dynlibs \
       dos \
       rtlconsts sysconst sysutils \
-      typinfo types fgl classes \
+      typinfo types sortbase fgl classes \
       math fpwidestring \
       charset cpall getopts \
       unicodedata  unicodenumtable character \
@@ -177,7 +177,7 @@ sysutils$(PPUEXT) : sysutils.pp $(wildcard $(OBJPASDIR)/sysutils/*.inc) \
 
 classes$(PPUEXT) : classes.pp $(wildcard $(OBJPASDIR)/classes/*.inc) \
                    sysutils$(PPUEXT) typinfo$(PPUEXT) rtlconsts$(PPUEXT) \
-		   sysconst$(PPUEXT) fgl$(PPUEXT)
+		   sysconst$(PPUEXT) fgl$(PPUEXT) sortbase$(PPUEXT)
         $(COMPILER) -Fi$(OBJPASDIR)/classes classes.pp
 
 fgl$(PPUEXT) : $(OBJPASDIR)/fgl.pp objpas$(PPUEXT) types$(PPUEXT) system$(PPUEXT) sysutils$(PPUEXT)
@@ -253,6 +253,9 @@ unicodenumtable$(PPUEXT): $(OBJPASDIR)/unicodenumtable.pas
 
 character$(PPUEXT): $(OBJPASDIR)/character.pas
         $(COMPILER) $(OBJPASDIR)/character.pas
+
+sortbase$(PPUEXT) : $(INC)/sortbase.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+	$(COMPILER) $<
 
 #
 # Other system-dependent RTL Units
