* Mover {CompilerVersion} from the fppkg.cfg template to samplecfg, because    on Windows it is possible to install fpc in a location without the    compilerversion in the path.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41184 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/fpcmkcfg/fppkg.cfg
+++ b/utils/fpcmkcfg/fppkg.cfg
@@ -14,7 +14,7 @@ InstallRepository=user
 [Repository]
 Name=fpc
 Description=Packages which are installed along with the Free Pascal Compiler
-Path=%GlobalPath%/{CompilerVersion}/
+Path=%GlobalPath%
 Prefix=%GlobalPrefix%
 
 [IncludeFiles]
