* Fixed the user-repository path on Windows
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41197 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/fpcmkcfg/fppkg.cfg
+++ b/utils/fpcmkcfg/fppkg.cfg
@@ -18,10 +18,10 @@ Path=%GlobalPath%
 Prefix=%GlobalPrefix%
 
 [IncludeFiles]
-FileMask=%CompilerConfigDir%/conf.d/*.conf
+FileMask=%CompilerConfigDir%conf.d/*.conf
 
 [Repository]
 Name=user
 Description=User-installed packages
-Path={LocalRepository}lib/fpc/{CompilerVersion}/
+Path={LocalRepository}%UserPathSuffix%
 Prefix={LocalRepository}
