+ added unit SortAlgs to rtl-extra. It implements extra sorting algorithms   that can be used in place of the default QuickSort implementation from unit   SortBase. Currently, only HeapSort is implemented, but others will be added   in the future.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41219 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -7686,6 +7686,7 @@ packages/rtl-extra/src/inc/real48utils.pp svn_mime_002dtype=text%2Fplain svn_eol
 packages/rtl-extra/src/inc/sockets.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-extra/src/inc/socketsh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-extra/src/inc/sockovl.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/rtl-extra/src/inc/sortalgs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-extra/src/inc/stdsock.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-extra/src/inc/ucomplex.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-extra/src/linux/ipccall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
