+ added test for unit sortalgs, that tests the heapsort and randomized quicksort algorithms
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41247 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -14386,6 +14386,7 @@ tests/test/units/objects/testobj2.pp svn_mime_002dtype=text%2Fplain svn_eol_002d
 tests/test/units/sharemem/libtest.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sharemem/test1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/softfpu/sfttst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/sortalgs/tsortalgs1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sortbase/tsortbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/strings/tstrcopy.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/strings/tstrings1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
