* aarch64: According to ARM64 ABI, function's arguments and the result are not required to be sign/zero extended to a full register size. Obey this rule for all targets except iOS where sign/zero extension is required.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41412 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -12881,6 +12881,7 @@ tests/test/packages/win-base/tdispvar1.pp svn_mime_002dtype=text%2Fplain svn_eol
 tests/test/packages/zlib/tzlib1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/t4cc1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/t4cc2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/taarch64abi.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabstract1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tabstrcl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabsvr1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
